Added Flickr button

--- a/index.html
+++ b/index.html
@@ -546,12 +546,17 @@
                         Instagram
                     </a>
                     
+                    <a href="https://instagram.com/alexbrooks" class="social-btn">
+                        <span>🌄</span>
+                        Flickr
+                    </a>
+
                     <a href="https://zoho-consultant.services" class="social-btn">
                         <span>🌐</span>
                         CRM Consultancy
                     </a>
                     
-                    <a href="World of Apple" class="social-btn">
+                    <a href="https://worldofapple.com" class="social-btn">
                         <span>🔗</span>
                         World of Apple
                     </a>
