--- a/index.html
+++ b/index.html
@@ -520,10 +520,10 @@
                 <h1 class="name">Alex Brooks</h1>
                 
                 <p class="bio">
-                    Hi, I’m Alex 👋🏻 I started out as a competitive runner who somehow also ran one of the web’s leading Apple blogs, landing me in the room for the first iPhone launch. University at Greenwich brought me into activism and leadership, and since then I’ve built a career in media and tech partnerships while staying active in my local community, politics, and creative side projects.
+                    Hi, I’m Alex 👋🏻 I started out as a competitive runner who somehow also ran one of the web’s leading Apple blogs, landing me in the room for the first iPhone launch. The University at Greenwich brought me into activism and leadership, and since then I’ve built a career in media and tech partnerships while staying active in my local community, politics, and creative side projects.
                     <br>
                     <br>
-                    Connect with me below, explore my photography, and if you’re looking for consulting support — do get in touch.
+                    Connect with me below, explore my photography, and if you’re looking for consulting support—do get in touch. (Yes I use em dashes, and so should you)
                 </p>
                 
                 <div class="social-links">
