--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex Brooks</title>
+
+    <meta name="description" content="Alex Brooks — writer, consultant, and technology enthusiast. Sharing projects, photography, and thoughts on Apple, technology, and politics">
+    <meta name="keywords" content="Alex Brooks, Apple enthusiast, World of Apple, photography, local activism, community projects London, politics, technology, London personal website, AlexBrooks, AlexBrooksUK">
+    <meta name="author" content="Alex Brooks">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://alexbrooks.co.uk/">
+    <meta property="og:title" content="Alex Brooks - Personal Website">
+    <meta property="og:description" content="Personal website of Alex Brooks. Connect with me on social media and explore my work.">
+    <meta property="og:image" content="https://alexbrooks.co.uk/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://alexbrooks.co.uk/">
+    <meta property="twitter:title" content="Alex Brooks - Personal Website">
+    <meta property="twitter:description" content="Personal website of Alex Brooks. Connect with me on social media and explore my work.">
+    <meta property="twitter:image" content="https://alexbrooks.co.uk/og-image.jpg">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+    <!-- SEO -->
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://alexbrooks.co.uk/">
+
     <style>
         * {
             margin: 0;
@@ -522,7 +552,7 @@
                     <div class="control-btn minimize-btn"></div>
                     <div class="control-btn maximize-btn"></div>
                 </div>
-                <div class="window-title">Personal Profile</div>
+                <div class="window-title">Alex's Personal Site</div>
             </div>
             
             <!-- Window Content -->
