--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <meta property="twitter:image" content="https://alexbrooks.co.uk/og-image.jpg">
 
     <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 
     <!-- SEO -->
     <meta name="robots" content="index, follow">
@@ -558,7 +558,7 @@
             <!-- Window Content -->
             <div class="profile-card">
                 <div class="headshot">
-                        <img src="alex-brooks-side.jpg" alt="Alex Brooks" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                        <img src="images/alex-brooks-side.jpg" alt="Alex Brooks" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                 </div>
                 
                 <h1 class="name">Alex Brooks</h1>
