Changed colour of content window

--- a/index.html
+++ b/index.html
@@ -263,21 +263,11 @@
         }
 
         .light .profile-card {
-            background: linear-gradient(
-                180deg,
-                rgba(255, 255, 255, 0.9) 0%,
-                rgba(255, 255, 255, 0.7) 50%,
-                rgba(255, 255, 255, 0.5) 100%
-            );
+            background: #ffffff; /* Solid white */
         }
 
         .dark .profile-card {
-            background: linear-gradient(
-                180deg,
-                rgba(255, 255, 255, 0.15) 0%,
-                rgba(255, 255, 255, 0.1) 50%,
-                rgba(255, 255, 255, 0.05) 100%
-            );
+            background: #2d3748; /* Solid dark gray */
         }
 
         /* Headshot styling */
