--- a/index.html
+++ b/index.html
@@ -263,11 +263,11 @@
         }
 
         .light .profile-card {
-            background: #ffffff; /* Solid white */
+            background: #ffffff;
         }
 
         .dark .profile-card {
-            background: #2d3748; /* Solid dark gray */
+            background: #2d3748;
         }
 
         /* Headshot styling */
@@ -446,7 +446,8 @@
                 0 1px 2px rgba(0, 0, 0, 0.2);
         }
 
-        /* Theme toggle in menu bar */
+        /* Theme Toggle */
+
         .theme-toggle {
             width: 40px;
             height: 16px;
@@ -454,14 +455,29 @@
             border: none;
             cursor: pointer;
             transition: all 0.3s ease;
+            position: relative;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+
+        /* Light mode - darker background for better visibility */
+        .light .theme-toggle {
+            background: linear-gradient(
+                180deg,
+                rgba(0, 0, 0, 0.15) 0%,
+                rgba(0, 0, 0, 0.25) 100%
+            );
+            border: 1px solid rgba(0, 0, 0, 0.3);
+        }
+
+        /* Dark mode - lighter background */
+        .dark .theme-toggle {
             background: linear-gradient(
                 180deg,
                 rgba(255, 255, 255, 0.3) 0%,
                 rgba(255, 255, 255, 0.1) 100%
             );
             border: 1px solid rgba(255, 255, 255, 0.3);
-            position: relative;
-            margin-left: 10px;
         }
 
         .theme-toggle::before {
@@ -472,16 +488,26 @@
             width: 12px;
             height: 12px;
             border-radius: 50%;
-            background: linear-gradient(
-                135deg,
-                rgba(255, 255, 255, 0.9) 0%,
-                rgba(240, 240, 240, 0.9) 100%
-            );
             transition: all 0.3s ease;
             box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
 
+        /* Light mode - white circle on dark background */
+        .light .theme-toggle::before {
+            background: linear-gradient(
+                135deg,
+                #ffffff 0%,
+                #f0f0f0 100%
+            );
+        }
+
+        /* Dark mode - dark circle on light background, moved to right */
         .dark .theme-toggle::before {
+            background: linear-gradient(
+                135deg,
+                #333333 0%,
+                #444444 100%
+            );
             transform: translateX(22px);
         }
 
