--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
 
         body {
-            font-family: 'Lucida Grande', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'SF Pro Text', 'Helvetica Neue', sans-serif;
             min-height: 100vh;
             transition: all 0.3s ease;
             padding-top: 22px; /* Space for menu bar */
