--- a/index.html
+++ b/index.html
@@ -316,16 +316,6 @@
             opacity: 0.9;
         }
 
-        /* Social Links - Stacked vertically */
-        .social-links {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            align-items: center;
-            max-width: 250px;
-            margin: 0 auto 30px auto;
-        }
-
         /* Footer styling */
         .footer {
             font-size: 12px;
@@ -342,6 +332,17 @@
 
         .dark .footer {
             border-color: rgba(255, 255, 255, 0.1);
+        }
+
+        /* Social Links - Stacked vertically */
+        
+        .social-links {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            align-items: center;
+            max-width: 250px;
+            margin: 0 auto 30px auto;
         }
 
         .social-btn {
@@ -586,7 +587,7 @@
                 <h1 class="name">Alex Brooks</h1>
                 
                 <p class="bio">
-                    Hi, I’m Alex 👋🏻 I started out as a competitive sprinter who somehow also ran one of the web’s leading Apple blogs in the last 2000s—landing me in the room for the first iPhone launch. In the 2010s my journey at the University at Greenwich brought me into activism and leadership, and since then I’ve built a career in media and tech partnerships while staying active in my local community, politics, and creative side projects.
+                    Hi, I’m Alex 👋🏻 I started out as a competitive sprinter who somehow also ran one of the web’s leading Apple blogs in the late 2000s—landing me in the room for the reveal of the first iPhone. In the 2010s my journey at the University at Greenwich brought me into activism and leadership, and since then I’ve built a career in media and tech partnerships while staying active in my local community, politics, and creative side projects.
                     <br>
                     <br>
                     Connect with me below, explore my work, and if you’re looking for consulting support—get in touch. (Yes I use em dashes, and so should you)
