--- a/index.html
+++ b/index.html
@@ -547,12 +547,13 @@
     </style>
     <!-- GoSquared Analytics -->
         <script>
-        !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(arguments)};
-        d=s.createElement(q);d.src='//d1l6p2sc9645hc.cloudfront.net/gosquared.js';q=
-        s.getElementsByTagName(q)[0];q.parentNode.insertBefore(d,q)}(window,document
-        ,'script','_gs');
-        _gs('GSN-486941-H');
-        _gs('set', 'anonymizeIP', true);
+            !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(arguments)};
+            d=s.createElement(q);d.src='//d1l6p2sc9645hc.cloudfront.net/gosquared.js';q=
+            s.getElementsByTagName(q)[0];q.parentNode.insertBefore(d,q)}(window,document
+            ,'script','_gs');
+
+            _gs('GSN-923931-O');
+            _gs('set', 'anonymizeIP', true);
         </script>
 
 </head>
