--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
                             <div class="menu-text">CRM Consultancy</div>
                         </a>
                         <a href="https://worldofapple.com" class="menu-item">
-                            <div class="menu-icon">🔗</div>
+                            <div class="menu-icon">🍎</div>
                             <div class="menu-text">World of Apple</div>
                         </a>
                     </div>
