--- a/croftonpark-ps.html
+++ b/croftonpark-ps.html
@@ -93,7 +93,7 @@
         /* Group photo styling*/
         .photo-container {
             text-align: center;
-            margin-bottom: 20px;
+            margin: 10px 0;
         }
 
         .group-photo {
@@ -236,7 +236,6 @@
             <p>I want to hear from you about Crofton Park's priorities, please contact me on: <strong><a href="tel:07746933682">07746 933682</a></strong> or <strong><a href="mailto:me@alexbrooks.uk">me@alexbrooks.uk</a></strong></p>
             
             <div class="footer">
-                © 2025 Alex Brooks
             </div>
         </div>
     </div>
