--- a/croftonpark-ps.html
+++ b/croftonpark-ps.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crofton Park Personal Statement</title>
+    <title>Alex Brooks for Crofton Park</title>
 
     <!-- SEO - Prevent indexing -->
     <meta name="robots" content="noindex, nofollow">
-    <meta name="description" content="Personal statement for Crofton Park">
+    <meta name="description" content="Personal statement for Crofton Park by Alex Brooks">
     <meta name="author" content="Alex Brooks">
 
     <!-- Favicons -->
@@ -19,8 +19,8 @@
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     
-    <meta name="apple-mobile-web-app-title" content="Crofton Park Personal Statement">
-    <meta name="application-name" content="Crofton Park Personal Statement">
+    <meta name="apple-mobile-web-app-title" content="Alex Brooks for Crofton Park">
+    <meta name="application-name" content="Alex Brooks for Crofton Park">
 
     <!-- Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
