Updating search tags

--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
     <meta property="og:url" content="https://alexbrooks.co.uk/">
     <meta property="og:title" content="Alex Brooks - Personal Website">
     <meta property="og:description" content="Personal website of Alex Brooks. Connect with me on social media and explore my work.">
-    <meta property="og:image" content="https://alexbrooks.co.uk/og-image.jpg">
+    <meta property="og:image" content="https://alexbrooks.co.uk/images/alex-brooks-side.jpg">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="800">
+    <meta property="og:image:alt" content="Alex Brooks">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://alexbrooks.co.uk/">
     <meta property="twitter:title" content="Alex Brooks - Personal Website">
     <meta property="twitter:description" content="Personal website of Alex Brooks. Connect with me on social media and explore my work.">
-    <meta property="twitter:image" content="https://alexbrooks.co.uk/og-image.jpg">
+    <meta property="twitter:image" content="https://alexbrooks.co.uk/images/alex-brooks-side.jpg">
+    <meta property="twitter:image:alt" content="Alex Brooks">
 
     <!-- Favicons -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -39,6 +43,27 @@
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://alexbrooks.co.uk/">
+
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Alex Brooks",
+      "description": "Writer, consultant, and technology enthusiast. Sharing projects, photography, and thoughts on Apple, technology, and politics",
+      "image": "https://alexbrooks.co.uk/images/alex-brooks-side.jpg",
+      "url": "https://alexbrooks.co.uk/",
+      "sameAs": [
+        "https://linkedin.com/in/alexbrooks",
+        "https://threads.net/alexbrooks",
+        "https://mastodon.social/@Alexbrooks",
+        "https://bsky.app/profile/alexbrooks.co.uk",
+        "https://instagram.com/alexbrooks",
+        "https://www.flickr.com/photos/alexbrooks/"
+      ]
+    }
+    </script>
 
     <style>
         * {
